--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="oleez-page-header-content wow fadeInUp">Coder, designer, and start up enthusiast. Computer Science
                 student by day, freelancer by night.</p>
             <p class="fadeInUp">A recent graduate from the University of Illinois at Chicago, I am currently pursing my
-                Master's. After my completion, I plan to pursue a PhD in Computer Science. I currently work as a Front
+                Master's. After my completion, I plan to gain as much experience as I can as a Full Stack Software Engineer, rising to a Senior Software Engineering role, where I am able to take initiative. After solid coding experience, I plan to purse a degree Masters in Information Systems through which I can rise up to the role of VP of Architecture and eventually Associate Vice President of Architechture. I currently work as a Front
                 End Engineer and plan to pursue my career in Product Development.</p>
             <h1 class="oleez-page-title wow fadeInUp"></h1>
             <div class="landing-about-feature wow fadeInUp">
